# learn_epoll_server

./: .gitignore
01_simple_epoll_server/src/: client.cpp  epoll_server.cpp
02_enhance_epoll_server/: CMakeLists.txt
02_enhance_epoll_server/src/: epoll_server.cpp
03_inet_address/src/: epoll_server.cpp
03_inet_address/src/net/: InetAddress.cpp  InetAddress.h
04_socket/src/: epoll_server.cpp
05_epoll_class/src/: epoll_server.cpp
05_epoll_class/src/net/: Epoll.cpp  Epoll.h
06_channel_class/src/: epoll_server.cpp
06_channel_class/src/net/: Channel.cpp  Channel.h
07_channel_class2/src/: epoll_server.cpp
07_channel_class2/src/net/: Channel.cpp  Channel.h  Socket.cpp
08_channel_callback/src/: epoll_server.cpp
08_channel_callback/src/net/: Channel.cpp  Channel.h  Epoll.cpp  Epoll.h
09_eventloop/src/: epoll_server.cpp
10_tcpserver/src/net/: Channel.cpp  Epoll.h  EventLoop.cpp  Socket.h  TcpServer.cpp  TcpServer.h
11_acceptor/src/net/: Acceptor.cpp  Acceptor.h  TcpServer.h
12_connection/src/net/: Acceptor.cpp  Acceptor.h  Channel.cpp  Channel.h  Connection.h  TcpServer.cpp
13_channel_acceptor_callback/src/net/: Acceptor.cpp  Channel.cpp  Connection.cpp  Epoll.cpp  TcpServer.cpp  TcpServer.h
14_connection_map/: *cmake-tools*
14_connection_map/src/: client.cpp
14_connection_map/src/net/: Acceptor.cpp  Channel.cpp  Channel.h  Connection.cpp  Connection.h  EventLoop.h  Socket.cpp  Socket.h  TcpServer.cpp  TcpServer.h
18_optimize_callback/src/: client.cpp  epoll_server.cpp
19_echo_server/: CMakeLists.txt
23_work_thread/: CMakeLists.txt
23_work_thread/src/net/: EchoServer.h  ThreadPool.cpp
25_unique_ptr/src/: client.cpp  epoll_server.cpp
26_eventfd/src/: client.cpp  epoll_server.cpp
27_clear_idle_conn/src/: client.cpp
28_better_buffer/src/: client.cpp  epoll_server.cpp
29_performance_test/: ClientTest.sh
29_performance_test/src/: client.cpp  epoll_server.cpp
30_string_utils/: CMakeLists.txt
30_string_utils/src/net/: Channel.cpp  ThreadPool.h
30_string_utils/src/util/: Str.cpp
31_http_request/: CMakeLists.txt
31_http_request/src/: test.cpp
32_http_server/: CMakeLists.txt
32_http_server/src/http/: HttpRequest.cpp  HttpServer.cpp  HttpServer.h
32_http_server/src/net/: Buffer.h  Channel.cpp  Socket.cpp  TcpServer.cpp
(+121 files in other folders)
